table paddings and hover; grid dynamic spacing; navigation rotuer link hover fix

--- a/client/styles/_grid.scss
+++ b/client/styles/_grid.scss
@@ -1,4 +1,4 @@
-$gutter: 35px;
+$gutter: 3%;
 .container {
     width: 100%;
     display: flex;
